[metadata]
name = plover-one-handed-lapwing
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools>=30.3.0
install_requires =
    plover>=4.0.0rc2
    plover-lapwing-aio>=1.3.7
packages =
    plover_one_handed_lapwing

[options.entry_points]
plover.extension =
    one_handed_lapwing = plover_one_handed_lapwing.extension:OneHandedLapwingExtension
plover.system =
    One-Handed Lapwing Stenotype = plover_one_handed_lapwing.system